fix: make tables scrollable on mobile (#6094)

--- a/client/src/document/ingredients/browser-compatibility-table/index-mobile.scss
+++ b/client/src/document/ingredients/browser-compatibility-table/index-mobile.scss
@@ -22,4 +22,8 @@
   .bc-history-desktop {
     display: none;
   }
+
+  .table-scroll {
+    overflow-x: auto;
+  }
 }
